--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .*
 !.git*
 
-# Add additional glob patterns here to specify more files or directories to be ignored by Git.
-# Learn more: https://git-scm.com/docs/gitignore
+build
