--- a/problems/2235/test.yaml
+++ b/problems/2235/test.yaml
@@ -2,11 +2,12 @@ cpp:
   function:
     name: sum
     inputs:
-      - name: num1
-        type: int
-      - name: num2
-        type: int
-    output: int
+      - type: int
+        value: num1
+      - type: int
+        value: num2
+    output:
+      type: int
 
 cases:
   - name: example 1
