--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v4.1.2
 
       - name: Test Solutions
-        run: npx --yes leettest@0.2.0
+        uses: threeal/leettest-action@v0.2.0
